base/policies/02-allow-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  labels:
    app.kubernetes.io/name: allow-dns
    app.kubernetes.io/instance: cloudcart-allow-dns
    app.kubernetes.io/component: network-policy
    app.kubernetes.io/part-of: cloudcart
    app.kubernetes.io/managed-by: kubectl
  namespace: cloudcart
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector: 
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
