base/policies/03-postgresql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgresql-netpol
  labels:
    app.kubernetes.io/name: postgresql-netpol
    app.kubernetes.io/instance: cloudcart-postgresql-netpol
    app.kubernetes.io/component: network-policy
    app.kubernetes.io/part-of: cloudcart
    app.kubernetes.io/managed-by: kubectl
  namespace: cloudcart
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/instance: cloudcart-postgresql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: catalog
              app.kubernetes.io/instance: cloudcart-catalog
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: identity
              app.kubernetes.io/instance: cloudcart-identity
        - podSelector:
            matchLabels:
                app.kubernetes.io/name: inventory
                app.kubernetes.io/instance: cloudcart-inventory
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: order
              app.kubernetes.io/instance: cloudcart-order
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: payment
              app.kubernetes.io/instance: cloudcart-payment
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: notification
              app.kubernetes.io/instance: cloudcart-notification
      ports:
        - protocol: TCP
          port: 5432
