base/policies/07-catalog.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: catalog-netpol
  labels:
    app.kubernetes.io/name: catalog-netpol
    app.kubernetes.io/instance: cloudcart-catalog-netpol
    app.kubernetes.io/component: network-policy
    app.kubernetes.io/part-of: cloudcart
    app.kubernetes.io/managed-by: kustomize
  namespace: cloudcart
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: catalog
      app.kubernetes.io/instance: cloudcart-catalog
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: gateway
              app.kubernetes.io/instance: cloudcart-gateway
      ports:
        - protocol: TCP
          port: 8000
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: postgresql
              app.kubernetes.io/instance: cloudcart-postgresql
      ports:
        - protocol: TCP
          port: 5432
