base/policies/08-identity.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: identity-netpol
  labels:
    app.kubernetes.io/name: identity-netpol
    app.kubernetes.io/instance: cloudcart-identity-netpol
    app.kubernetes.io/component: network-policy
    app.kubernetes.io/part-of: cloudcart
    app.kubernetes.io/managed-by: kubectl
  namespace: cloudcart
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: identity
      app.kubernetes.io/instance: cloudcart-identity
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: gateway
              app.kubernetes.io/instance: cloudcart-gateway
      ports:
        - protocol: TCP
          port: 8000
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: redis
              app.kubernetes.io/instance: cloudcart-redis
      ports:
        - protocol: TCP
          port: 6379
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: postgresql
              app.kubernetes.io/instance: cloudcart-postgresql
      ports:
        - protocol: TCP
          port: 5432
